# lsHotword

./: .gitignore  pyproject.toml  requirements.txt  run_lshuitrainer.bat  setup.bat  setup.py  setup_uv.bat  test_model.bat
lsHotword/: uitrainer.py
